Title fix, reducing spacing around buttons and optimizing images.

--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -19,6 +19,10 @@ a.button:not(.no-margin) {
     margin-bottom: var(--space-5);
 }
 
+a.button.no-bottom-margin {
+    margin-bottom: 0;
+}
+
 a.transparent {
     background-color: transparent;
     border-color: inherit !important;
